add task for BookStoreTests with RestAssured and Custom Allure Template

--- a/build.gradle
+++ b/build.gradle
@@ -57,3 +57,8 @@ tasks.withType(Test) {
         }
     }
 }
+    task bookstore_tests(type: Test) {
+        useJUnitPlatform {
+            includeTags "bookstoretest"
+        }
+    }
